# mallocstat

./: CMakeLists.txt  README.md  options_print.cmake  package.cmake  settings.cmake
cmake/: 01-cpp.cmake  11-install_prep.cmake
include/: mallocstat.h
src/: CMakeLists.txt  mallocstat.c
test/: CMakeLists.txt  benchmark.h  malloc_bench.c  malloc_test.c  malloc_test.cpp
